<resources>
    <string name="app_name">Cocolator</string>
    <string name="black">BLACK</string>
    <string name="empty">\?</string>
    <string name="brown">BROWN</string>
    <string name="red">RED</string>
    <string name="orange">ORANGE</string>
    <string name="yellow">YELLOW</string>
    <string name="green">GREEN</string>
    <string name="blue">BLUE</string>
    <string name="purple">PURPLE</string>
    <string name="gray">GRAY</string>
    <string name="white">WHITE</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="c">C</string>
    <string name="silver">SILVER</string>
    <string name="gold">GOLD</string>
    <string name="_1">1</string>
    <string name="delete">DELETE</string>
    <string name="clear">CLEAR</string>
    <string name="credit">Thanks to</string>
    <string name="thanks_to">thanks_to, nex button developer, google, intelliJ, Kelas terbuka, etc</string>
</resources>