<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <Button
        android:id="@+id/yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_space"
        android:background="@drawable/view_frame_yellow"
        android:text="@string/yellow"
        android:textColor="@color/white_text" />

    <Button
        android:id="@+id/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_space"
        android:background="@drawable/view_frame_green"
        android:text="@string/green"
        android:textColor="@color/white_text" />

    <Button
        android:id="@+id/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_space"
        android:background="@drawable/view_frame_blue"
        android:text="@string/blue"
        android:textColor="@color/white_text" />

    <Button
        android:id="@+id/purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_space"
        android:background="@drawable/view_frame_purple"
        android:text="@string/purple"
        android:textColor="@color/white_text" />

</LinearLayout>